k8s/dev/identity-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: identity-api
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: identity-api
  template:
    metadata:
      labels:
        app: identity-api
    spec:
      containers:
      - name: identity-api
        image: kamilburuk/eshop-identity-api:latest
        imagePullPolicy: Always

        ports:
        - containerPort: 8080
