k8s/dev/identity-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: identity-api
  namespace: dev
spec:
  selector:
    app: identity-api
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
