k8s/dev/identity-api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: identity-api
  namespace: dev
spec:
  ingressClassName: traefik

  tls:
  - hosts:
    - identity.eshop.local
    secretName: eshop-tls

  rules:
  - host: identity.eshop.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: identity-api
            port:
              number: 80
